--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 	</parent>
 	<groupId>com.universidad.mariana.ingenieria.sistemas</groupId>
 	<artifactId>demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>SimuPremium</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>com.universidad.mariana.ingenieria.sistemas</groupId>
             <artifactId>demo</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
